VFS-3137 scroll and z-index of sidebar fix

--- a/src/app/styles/app-layout.scss
+++ b/src/app/styles/app-layout.scss
@@ -79,6 +79,7 @@ $content-col-padding: $padding-large-horizontal * 1.5;
     }
   }
   .col-sidebar {
+    z-index: 1;
     background: $color-sidebar-background;
     // TODO same as sidenav
     border-right: 1px solid $color-one-list-item-separator;
@@ -89,7 +90,7 @@ $content-col-padding: $padding-large-horizontal * 1.5;
     }
     @media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
       left: 0px;
-      top: $mobile-top-height;
+      padding-top: $mobile-top-height;
     }
     @media (min-width: $screen-lg-min) {
       width: $sidebar-menu-width-lg;
